89 using java optional